--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "conf": "^12.0.0",
     "discord-player": "^6.6.2",
-    "discord-player-youtubei": "^1.3.7",
+    "discord-player-youtubei": "github:MangoD33/discord-player-youtubei",
     "discord.js": "^14.12.1",
     "dotenv": "^16.3.1",
     "ffmpeg": "0.0.4",
