--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "opusscript": "0.0.8",
     "prism-media": "^1.1.0",
     "youtube-dl-exec": "^3.0.12",
-    "ytdl-core": "^4.11.5"
+    "ytdl-core": "^4.11.5",
+    "discord-api-types": "^0.37.115",
+    "@discordjs/rest": "^2.4.2"
   },
   "devDependencies": {
     "prettier": "3.0.2"
